# AstroClocks

./: .gitignore  AstroClocks-v2.7.iss  AstroClocks-v3.0.iss  AstroClocks-v3.1.iss  AstroClocks-v3.1.py  AstroClocks-v3.2.iss  AstroClocks-v3.2.py  AstroClocks-v3.2.spec  AstroClocks-v3.3.iss  AstroClocks-v3.3.py  Build-Windows.ps1  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  Verify-Release.ps1  pyproject.toml  requirements.txt
astroclocks/: __init__.py  app.py  app_deep_sky.py  app_dialogs.py  app_double_stars.py  app_object_search.py  app_skymap.py  app_star_search.py  app_visibility.py  ascom_mount.py  astronomy.py  deep_sky_catalog.py  deep_sky_morphology.py  deep_sky_photometry.py  double_star_catalog.py  i18n.py  local_deep_sky_catalog.py  local_object_catalog.py  orbit_catalog.py  settings.py  sites.py  star_catalog.py  star_search_catalog.py  star_spectral_catalog.py  star_sprites.py  updater.py  utils.py  version.py  wds_binary_catalog.py  windowing.py
tests/: test_app_connectivity.py  test_app_coordinate_limits.py  test_app_dialog_chrome.py  test_app_dialogs_coordinate_source.py  test_app_mount_state.py  test_app_object_search.py  test_app_online_controls.py  test_app_skymap_labels.py  test_app_skystatus.py  test_ascom_mount.py  test_astronomy_coordinates.py  test_deep_sky_catalog.py  test_local_object_catalog.py  test_orbit_catalog.py  test_search_offline_cache_notes.py  test_settings.py  test_star_search_catalog.py  test_star_sprites.py  test_updater.py  test_version.py
