[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroclocks"
version = "3.0.0"
description = "Astronomical clocks, sidereal time, JNow coordinates, and a live sky map."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.0",
    "astroplan>=0.10",
    "zeep>=4.2",
]

[project.scripts]
astroclocks = "astroclocks.app:main"

[tool.setuptools.packages.find]
include = ["astroclocks*"]

[tool.setuptools.package-data]
astroclocks = ["*.ico"]
