[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroclocks"
version = "3.1.0"
description = "Astronomical clocks, sidereal time, JNow coordinates, and a live sky map."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.0",
    "astroplan>=0.10",
    "Pillow>=10.0",
    "zeep>=4.2",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.20",
]

[project.scripts]
astroclocks = "astroclocks.app:main"

[tool.setuptools.packages.find]
include = ["astroclocks*"]

[tool.setuptools.package-data]
astroclocks = ["*.ico"]
